--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "test-hoteles",
+  "name": "otrotestcafe",
   "version": "1.0.0",
-  "description": "Test-hoteles",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "testcafe chrome test/",
+    "onetest": "testcafe chrome test/badRegister.test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "testcafe": "^3.3.0"
+    "testcafe": "^3.1.0"
+  },
+  "dependencies": {
+    "faker": "^5.5.3"
   }
 }
